<resources>
    <string name="app_name">MySimpleCalculator</string>
    <string name="zero">0</string>
    <string name="ac">AC</string>
    <string name="min_plus">±</string>
    <string name="percent">%</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="comma">,</string>
    <string name="equal">=</string>
    <string name="error">error</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="switch_theme">Switch to Dark theme</string>
    <string name="aboutText">Simple calculator by Dmitry Gridchin. Homework for Android Developer
        course. GeekBrains University. Application icon by Freepik</string>
    <string name="backButton">Back</string>
</resources>