<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:gravity="right"
            android:hint="@string/_0"
            android:textSize="@dimen/textviewSize"
            android:paddingRight="@dimen/horizontal_margin"
            android:background="@drawable/style_textview" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/ac"
                android:text="@string/ac"
                style="@style/DarkGrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/min_plus"
                android:text="@string/min_plus"
                style="@style/DarkGrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent"
                android:text="@string/percent"
                style="@style/DarkGrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/div"
                android:text="@string/divide"
                style="@style/OrangeButtons" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/_7"
                android:text="@string/_7"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_8"
                android:text="@string/_8"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_9"
                android:text="@string/_9"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                android:text="@string/multiply"
                style="@style/OrangeButtons" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_4"
                android:text="@string/_4"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_5"
                android:text="@string/_5"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_6"
                android:text="@string/_6"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                android:text="@string/minus"
                style="@style/OrangeButtons" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_button_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_marginRight="@dimen/horizontal_margin"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_1"
                android:text="@string/_1"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_2"
                android:text="@string/_2"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/_3"
                android:text="@string/_3"
                style="@style/GrayButtons" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                android:text="@string/plus"
                style="@style/OrangeButtons" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_weight="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/_0"
                    android:text="@string/_0"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:layout_weight="2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/comma"
                    android:text="@string/comma"
                    style="@style/GrayButtons" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/equal"
                    android:text="@string/equal"
                    style="@style/OrangeButtons" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>